[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Sprites/book_last_right.png" type="Texture" id=1]
[ext_resource path="res://Resources/Sprites/book_single_left.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/book_empty.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/arrow.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Paginator.gd" type="Script" id=5]
[ext_resource path="res://Resources/Sprites/book_last_left.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/book_single_right.png" type="Texture" id=7]
[ext_resource path="res://Resources/Fonts/ChiKareGo_small.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.160784, 0.133333, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.258824, 0.14902, 0.0509804, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1.78814e-07, 4.19617e-05 )
current = true
zoom = Vector2( 0.3, 0.3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 4.19617e-05 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Page1" type="Sprite" parent="."]
visible = false
position = Vector2( -68, -1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Page1"]
margin_left = -21.6613
margin_top = 34.6879
margin_right = 26.3387
margin_bottom = 52.6879
rect_rotation = -6.2
rect_pivot_offset = Vector2( 24.3278, 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Page1"]
margin_left = -39.027
margin_top = -47.0
margin_right = 28.973
margin_bottom = -33.0
rect_rotation = -6.2
custom_fonts/font = ExtResource( 8 )
text = "Rotkaeppchen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page2" type="Sprite" parent="."]
visible = false
position = Vector2( 68, 4.19617e-05 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Page3" type="Sprite" parent="."]
visible = false
position = Vector2( -66, 1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Page3"]
margin_left = -23.0
margin_top = 34.0
margin_right = 27.0
margin_bottom = 54.0
rect_rotation = -6.2
rect_pivot_offset = Vector2( 24.3278, 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
disabled = true
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Page3"]
margin_left = -39.027
margin_top = -47.0
margin_right = 28.973
margin_bottom = -33.0
rect_rotation = -6.2
custom_fonts/font = ExtResource( 8 )
text = "Rapunzel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page4" type="Sprite" parent="."]
visible = false
position = Vector2( 66, 2 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Page5" type="Sprite" parent="."]
visible = false
position = Vector2( 64, 4 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Page6" type="Sprite" parent="."]
visible = false
position = Vector2( -64, 4 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="Page6"]
margin_left = -21.6613
margin_top = 34.6879
margin_right = 26.3387
margin_bottom = 52.6879
rect_rotation = -6.2
rect_pivot_offset = Vector2( 24.3278, 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 8 )
disabled = true
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Page6"]
margin_left = -44.0811
margin_top = -45.8108
margin_right = 43.9189
margin_bottom = -31.8108
rect_rotation = -6.2
custom_fonts/font = ExtResource( 8 )
text = "Schneekoenigin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page7" type="Sprite" parent="."]
position = Vector2( -62, 4.19617e-05 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Page7"]
margin_left = -52.186
margin_top = -47.0
margin_right = 40.814
margin_bottom = -33.0
rect_rotation = -6.2
custom_fonts/font = ExtResource( 8 )
text = "Maerchentrubel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page8" type="Sprite" parent="."]
position = Vector2( 66, 0 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Next" type="TextureButton" parent="."]
margin_left = 130.0
margin_top = -5.0
margin_right = 146.0
margin_bottom = 12.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="TextureButton" parent="."]
margin_left = -129.0
margin_top = -6.0
margin_right = -113.0
margin_bottom = 11.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Page1/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Next" to="." method="_on_Next_button_up"]
[connection signal="button_up" from="Previous" to="." method="_on_Previous_button_up"]
